force-app/PackagingWizard/main/core/objects/PackagingWizardSettings__c/PackagingWizardSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Packaging Wizard Settings</label>
</CustomObject>