force-app/PackagingWizard/main/core/objects/PackagingWizardSettings__c/fields/HerokuAccessToken__c.field-meta.xml
<CustomField>
    <fullName>HerokuAccessToken__c</fullName>
    <label>Heroku Access Token</label>
    <length>36</length>
    <type>Text</type>
</CustomField>