force-app/PackagingWizard/main/core/objects/PackagingWizardSettings__c/fields/HerokuAuthorizationId__c.field-meta.xml
<CustomField>
    <fullName>HerokuAuthorizationId__c</fullName>
    <label>Heroku Authorization Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>