force-app/PackagingWizard/main/core/objects/PackagingWizardSettings__c/fields/HerokuPipelineId__c.field-meta.xml
<CustomField>
    <fullName>HerokuPipelineId__c</fullName>
    <label>Heroku Pipeline Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>