force-app/PackagingWizard/main/core/objects/PackagingWizardSettings__c/fields/HerokuQaAppId__c.field-meta.xml
<CustomField>
    <fullName>HerokuQaAppId__c</fullName>
    <label>Heroku QA App Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>