force-app/PackagingWizard/main/core/objects/PackagingWizardSettings__c/fields/HerokuRefreshToken__c.field-meta.xml
<CustomField>
    <fullName>HerokuRefreshToken__c</fullName>
    <label>Heroku Refresh Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>