force-app/PackagingWizard/main/core/objects/PackagingWizardSettings__c/fields/HerokuStagingAppId__c.field-meta.xml
<CustomField>
    <fullName>HerokuStagingAppId__c</fullName>
    <label>Heroku Staging App Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>