force-app/PackagingWizard/main/core/objects/PackagingWizardSettings__c/fields/HerokuUserName__c.field-meta.xml
<CustomField>
    <fullName>HerokuUserName__c</fullName>
    <label>Heroku User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>