force-app/PackagingWizard/main/core/objects/PackagingWizardSettings__c/fields/ManagedPackagePrefix__c.field-meta.xml
<CustomField>
    <fullName>ManagedPackagePrefix__c</fullName>
    <label>Managed Package Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>