force-app/PackagingWizard/main/core/objects/PackagingWizardSettings__c/fields/PackageName__c.field-meta.xml
<CustomField>
    <fullName>PackageName__c</fullName>
    <label>Package Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>